# wqparallel

./: .clang-format  .clangd  .gitignore  LICENSE  README.md  flake.nix  meson.build  meson_options.txt  xmake.lua
.github/workflows/: ci.yml
docs/: Doxyfile.in  mainpage.md
headers/weqeqq/: parallel.h
headers/weqeqq/parallel/: execution.h  for_each.h  thread_pool.h
scripts/: run-doxygen.sh
sources/weqeqq/: parallel.cppm
sources/weqeqq/parallel/: execution.cppm  for_each.cppm  thread_pool.cppm
tests/: meson.build  wqparallel_tests.cc  xmake.lua
tests/sources/: for_each_index_tests.cc  for_each_tests.cc  policy_tests.cc  thread_pool_tests.cc  transform_tests.cc
